@@ -1,5 +1,8 @@
 0.25.1	UNRELEASED
 
+ * Fix AssertionError when accessing ref names with length matching binary
+   hash length (e.g., 32 bytes for SHA-256). (Jelmer Vernooĳ, #2040)
+
  * Add ``parse_commit_broken`` function to parse broken commits.
    (Valentin Lorentz, Jelmer Vernooĳ)
 
